Fix text flow on small->medium screens

--- a/voteswap/static/theme.css
+++ b/voteswap/static/theme.css
@@ -271,7 +271,6 @@ footer .navbar .navbar-collapse {
   }
   .leader h1 {
     margin-top: 0;
-    padding-top: 10px;
   }
   .leader p.leader-description {
     font-size: 0.5em;
@@ -281,7 +280,8 @@ footer .navbar .navbar-collapse {
 @media all and (max-width: 750px) {
   .leader {
     width: 60%;
-    padding-top: 10px;
+    padding-top: 0;
+    margin-top: 0;
   }
   p.nader-gore {
     width: 300px;
